@@ -22,7 +22,6 @@ import java.io.File;
 import java.io.IOException;
 import java.lang.reflect.Method;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import org.apache.commons.io.FileUtils;
@@ -38,6 +37,7 @@ import org.apache.pinot.segment.spi.creator.SegmentVersion;
 import org.apache.pinot.segment.spi.index.startree.AggregationFunctionColumnPair;
 import org.apache.pinot.spi.config.table.ColumnPartitionConfig;
 import org.apache.pinot.spi.config.table.FieldConfig;
+import org.apache.pinot.spi.config.table.MultiColumnTextIndexConfig;
 import org.apache.pinot.spi.config.table.SegmentPartitionConfig;
 import org.apache.pinot.spi.config.table.StarTreeAggregationConfig;
 import org.apache.pinot.spi.config.table.StarTreeIndexConfig;
@@ -70,6 +70,9 @@ public class BaseTableDataManagerNeedRefreshTest {
 
   private static final String DEFAULT_TIME_COLUMN_NAME = "DaysSinceEpoch";
   private static final String MS_SINCE_EPOCH_COLUMN_NAME = "MilliSecondsSinceEpoch";
+  //multi-column text index
+  private static final String MC_TEXT_INDEX_COLUMN_1 = "MCtextColumn1";
+  private static final String MC_TEXT_INDEX_COLUMN_2 = "MCtextColumn2";
   private static final String TEXT_INDEX_COLUMN = "textColumn";
   private static final String TEXT_INDEX_COLUMN_MV = "textColumnMV";
   private static final String PARTITIONED_COLUMN_NAME = "partitionedColumn";
@@ -107,7 +110,7 @@ public class BaseTableDataManagerNeedRefreshTest {
     return new TableConfigBuilder(TableType.OFFLINE).setTableName(DEFAULT_TABLE_NAME)
         .setTimeColumnName(DEFAULT_TIME_COLUMN_NAME)
         .setNullHandlingEnabled(true)
-        .setNoDictionaryColumns(List.of(TEXT_INDEX_COLUMN));
+        .setNoDictionaryColumns(List.of(TEXT_INDEX_COLUMN, MC_TEXT_INDEX_COLUMN_1, MC_TEXT_INDEX_COLUMN_1));
   }
 
   protected static Schema getSchema()
@@ -116,6 +119,8 @@ public class BaseTableDataManagerNeedRefreshTest {
             "1:DAYS")
         .addDateTime(MS_SINCE_EPOCH_COLUMN_NAME, FieldSpec.DataType.LONG, "1:MILLISECONDS:EPOCH", "1:MILLISECONDS")
         .addSingleValueDimension(PARTITIONED_COLUMN_NAME, FieldSpec.DataType.INT)
+        .addSingleValueDimension(MC_TEXT_INDEX_COLUMN_1, FieldSpec.DataType.STRING)
+        .addSingleValueDimension(MC_TEXT_INDEX_COLUMN_2, FieldSpec.DataType.STRING)
         .addSingleValueDimension(TEXT_INDEX_COLUMN, FieldSpec.DataType.STRING)
         .addMultiValueDimension(TEXT_INDEX_COLUMN_MV, FieldSpec.DataType.STRING)
         .addSingleValueDimension(JSON_INDEX_COLUMN, FieldSpec.DataType.JSON)
@@ -130,6 +135,8 @@ public class BaseTableDataManagerNeedRefreshTest {
     GenericRow row0 = new GenericRow();
     row0.putValue(DEFAULT_TIME_COLUMN_NAME, 20000);
     row0.putValue(MS_SINCE_EPOCH_COLUMN_NAME, 20000L * 86400 * 1000);
+    row0.putValue(MC_TEXT_INDEX_COLUMN_1, "mc_text_index_column_1");
+    row0.putValue(MC_TEXT_INDEX_COLUMN_2, "mc_text_index_column_2");
     row0.putValue(TEXT_INDEX_COLUMN, "text_index_column_0");
     row0.putValue(TEXT_INDEX_COLUMN_MV, "text_index_column_0");
     row0.putValue(JSON_INDEX_COLUMN, "{\"a\":\"b\"}");
@@ -141,6 +148,8 @@ public class BaseTableDataManagerNeedRefreshTest {
     GenericRow row1 = new GenericRow();
     row1.putValue(DEFAULT_TIME_COLUMN_NAME, 20001);
     row1.putValue(MS_SINCE_EPOCH_COLUMN_NAME, 20001L * 86400 * 1000);
+    row1.putValue(MC_TEXT_INDEX_COLUMN_1, "mc_text_index_column_1");
+    row1.putValue(MC_TEXT_INDEX_COLUMN_2, "mc_text_index_column_2");
     row1.putValue(TEXT_INDEX_COLUMN, "text_index_column_0");
     row1.putValue(TEXT_INDEX_COLUMN_MV, "text_index_column_1");
     row1.putValue(JSON_INDEX_COLUMN, "{\"a\":\"b\"}");
@@ -152,6 +161,8 @@ public class BaseTableDataManagerNeedRefreshTest {
     GenericRow row2 = new GenericRow();
     row2.putValue(DEFAULT_TIME_COLUMN_NAME, 20002);
     row2.putValue(MS_SINCE_EPOCH_COLUMN_NAME, 20002L * 86400 * 1000);
+    row2.putValue(MC_TEXT_INDEX_COLUMN_1, "mc_text_index_column_1");
+    row2.putValue(MC_TEXT_INDEX_COLUMN_2, "mc_text_index_column_2");
     row2.putValue(TEXT_INDEX_COLUMN, "text_index_column_0");
     row2.putValue(TEXT_INDEX_COLUMN_MV, "text_index_column_2");
     row2.putValue(JSON_INDEX_COLUMN, "{\"a\":\"b\"}");
@@ -200,15 +211,20 @@ public class BaseTableDataManagerNeedRefreshTest {
       throws Exception {
     TableConfig tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(DEFAULT_TABLE_NAME)
         .setNullHandlingEnabled(true)
-        .setNoDictionaryColumns(Collections.singletonList(TEXT_INDEX_COLUMN))
+        .setNoDictionaryColumns(List.of(TEXT_INDEX_COLUMN, MC_TEXT_INDEX_COLUMN_1, MC_TEXT_INDEX_COLUMN_2))
         .build();
-    Schema schema = new Schema.SchemaBuilder().addSingleValueDimension(TEXT_INDEX_COLUMN, FieldSpec.DataType.STRING)
+    Schema schema = new Schema.SchemaBuilder()
+        .addSingleValueDimension(MC_TEXT_INDEX_COLUMN_1, FieldSpec.DataType.STRING)
+        .addSingleValueDimension(MC_TEXT_INDEX_COLUMN_2, FieldSpec.DataType.STRING)
+        .addSingleValueDimension(TEXT_INDEX_COLUMN, FieldSpec.DataType.STRING)
         .addSingleValueDimension(JSON_INDEX_COLUMN, FieldSpec.DataType.JSON)
         .addSingleValueDimension(FST_TEST_COLUMN, FieldSpec.DataType.STRING)
         .build();
     IndexLoadingConfig indexLoadingConfig = new IndexLoadingConfig(tableConfig, schema);
 
     GenericRow row = new GenericRow();
+    row.putValue(MC_TEXT_INDEX_COLUMN_1, "mc_text_index_column_1");
+    row.putValue(MC_TEXT_INDEX_COLUMN_2, "mc_text_index_column_2");
     row.putValue(TEXT_INDEX_COLUMN, "text_index_column");
     row.putValue(JSON_INDEX_COLUMN, "{\"a\":\"b\"}");
     row.putValue(FST_TEST_COLUMN, "fst_test_column");
@@ -406,11 +422,86 @@ public class BaseTableDataManagerNeedRefreshTest {
   }
 
   @Test
+  public void testAddMultiColumnTextIndex() {
+    MultiColumnTextIndexConfig newIndex =
+        new MultiColumnTextIndexConfig(List.of(MC_TEXT_INDEX_COLUMN_1, MC_TEXT_INDEX_COLUMN_2));
+    TableConfig tableConfig =
+        getTableConfigBuilder().setMultiColumnTextIndexConfig(newIndex).build();
+    assertTrue(BASE_TABLE_DATA_MANAGER.isSegmentStale(new IndexLoadingConfig(tableConfig, SCHEMA),
+        IMMUTABLE_SEGMENT_DATA_MANAGER).isStale());
+  }
+
+  @Test
+  public void testMultiColumnTextIndexWithDifferentColumns()
+      throws Exception {
+    TableConfig tableConfig = getTableConfigBuilder()
+        .setMultiColumnTextIndexConfig(
+            new MultiColumnTextIndexConfig(List.of(MC_TEXT_INDEX_COLUMN_1))).build();
+
+    ImmutableSegmentDataManager segmentDataManager =
+        createImmutableSegmentDataManager(new IndexLoadingConfig(tableConfig, SCHEMA), _testName, generateRows());
+
+    TableConfig newTableConfig = getTableConfigBuilder()
+        .setMultiColumnTextIndexConfig(
+            new MultiColumnTextIndexConfig(List.of(MC_TEXT_INDEX_COLUMN_1, MC_TEXT_INDEX_COLUMN_2)))
+        .build();
+
+    assertTrue(
+        BASE_TABLE_DATA_MANAGER.isSegmentStale(new IndexLoadingConfig(newTableConfig, SCHEMA), segmentDataManager)
+            .isStale());
+  }
+
+  @Test
+  public void testMultiColumnTextIndexWithDifferentSharedProperties()
+      throws Exception {
+    TableConfig tableConfig = getTableConfigBuilder()
+        .setMultiColumnTextIndexConfig(
+            new MultiColumnTextIndexConfig(List.of(MC_TEXT_INDEX_COLUMN_1, MC_TEXT_INDEX_COLUMN_2), null, null))
+        .build();
+
+    ImmutableSegmentDataManager segmentDataManager =
+        createImmutableSegmentDataManager(new IndexLoadingConfig(tableConfig, SCHEMA), _testName, generateRows());
+
+    TableConfig newTableConfig = getTableConfigBuilder()
+        .setMultiColumnTextIndexConfig(
+            new MultiColumnTextIndexConfig(List.of(MC_TEXT_INDEX_COLUMN_1, MC_TEXT_INDEX_COLUMN_2),
+                Map.of(FieldConfig.TEXT_INDEX_CASE_SENSITIVE_KEY, "true"), null))
+        .build();
+
+    assertTrue(
+        BASE_TABLE_DATA_MANAGER.isSegmentStale(new IndexLoadingConfig(newTableConfig, SCHEMA), segmentDataManager)
+            .isStale());
+  }
+
+  @Test
+  public void testMultiColumnTextIndexWithDifferentColumnProperties()
+      throws Exception {
+    TableConfig tableConfig = getTableConfigBuilder()
+        .setMultiColumnTextIndexConfig(
+            new MultiColumnTextIndexConfig(List.of(MC_TEXT_INDEX_COLUMN_1, MC_TEXT_INDEX_COLUMN_2), null, null))
+        .build();
+
+    ImmutableSegmentDataManager segmentDataManager =
+        createImmutableSegmentDataManager(new IndexLoadingConfig(tableConfig, SCHEMA), _testName, generateRows());
+
+    TableConfig newTableConfig = getTableConfigBuilder()
+        .setMultiColumnTextIndexConfig(
+            new MultiColumnTextIndexConfig(List.of(MC_TEXT_INDEX_COLUMN_1, MC_TEXT_INDEX_COLUMN_2),
+                null, Map.of(MC_TEXT_INDEX_COLUMN_1, Map.of(FieldConfig.TEXT_INDEX_CASE_SENSITIVE_KEY, "true"))))
+        .build();
+
+    assertTrue(
+        BASE_TABLE_DATA_MANAGER.isSegmentStale(new IndexLoadingConfig(newTableConfig, SCHEMA), segmentDataManager)
+            .isStale());
+  }
+
+  @Test
   public void addStartreeIndex() {
     // Test 1 : Adding a StarTree index should trigger segment refresh.
 
-    StarTreeIndexConfig starTreeIndexConfig = new StarTreeIndexConfig(Collections.singletonList("Carrier"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+    StarTreeIndexConfig starTreeIndexConfig =
+        new StarTreeIndexConfig(List.of("Carrier"), null, List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null,
+            100);
     TableConfig tableConfig = getTableConfigBuilder().setStarTreeIndexConfigs(List.of(starTreeIndexConfig)).build();
     assertTrue(BASE_TABLE_DATA_MANAGER.isSegmentStale(new IndexLoadingConfig(tableConfig, SCHEMA),
         IMMUTABLE_SEGMENT_DATA_MANAGER).isStale());
@@ -423,15 +514,17 @@ public class BaseTableDataManagerNeedRefreshTest {
     // trigger segment refresh.
 
     // Create a segment with StarTree index on Carrier.
-    StarTreeIndexConfig starTreeIndexConfig = new StarTreeIndexConfig(Collections.singletonList("Carrier"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+    StarTreeIndexConfig starTreeIndexConfig =
+        new StarTreeIndexConfig(List.of("Carrier"), null, List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null,
+            100);
     TableConfig tableConfig = getTableConfigBuilder().setStarTreeIndexConfigs(List.of(starTreeIndexConfig)).build();
     ImmutableSegmentDataManager segmentDataManager =
         createImmutableSegmentDataManager(new IndexLoadingConfig(tableConfig, SCHEMA), _testName, generateRows());
 
     // Create a StarTree index on Distance.
-    StarTreeIndexConfig newStarTreeIndexConfig = new StarTreeIndexConfig(Collections.singletonList("Distance"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+    StarTreeIndexConfig newStarTreeIndexConfig =
+        new StarTreeIndexConfig(List.of("Distance"), null, List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null,
+            100);
     TableConfig newTableConfig =
         getTableConfigBuilder().setStarTreeIndexConfigs(List.of(newStarTreeIndexConfig)).build();
     assertTrue(
@@ -446,14 +539,15 @@ public class BaseTableDataManagerNeedRefreshTest {
     // refresh.
 
     // Create a segment with StarTree index on Carrier.
-    StarTreeIndexConfig starTreeIndexConfig = new StarTreeIndexConfig(Collections.singletonList("Carrier"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+    StarTreeIndexConfig starTreeIndexConfig =
+        new StarTreeIndexConfig(List.of("Carrier"), null, List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null,
+            100);
     TableConfig tableConfig = getTableConfigBuilder().setStarTreeIndexConfigs(List.of(starTreeIndexConfig)).build();
     ImmutableSegmentDataManager segmentDataManager =
         createImmutableSegmentDataManager(new IndexLoadingConfig(tableConfig, SCHEMA), _testName, generateRows());
 
     StarTreeIndexConfig newStarTreeIndexConfig = new StarTreeIndexConfig(Arrays.asList("Carrier", "Distance"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+        List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null, 100);
     TableConfig newTableConfig =
         getTableConfigBuilder().setStarTreeIndexConfigs(List.of(newStarTreeIndexConfig)).build();
     assertTrue(
@@ -469,14 +563,14 @@ public class BaseTableDataManagerNeedRefreshTest {
 
     // Create a segment with StarTree index on Carrier, Distance.
     StarTreeIndexConfig starTreeIndexConfig = new StarTreeIndexConfig(Arrays.asList("Carrier", "Distance"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+        List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null, 100);
     TableConfig tableConfig = getTableConfigBuilder().setStarTreeIndexConfigs(List.of(starTreeIndexConfig)).build();
     ImmutableSegmentDataManager segmentDataManager =
         createImmutableSegmentDataManager(new IndexLoadingConfig(tableConfig, SCHEMA), _testName, generateRows());
 
     // Create a StarTree index.
     StarTreeIndexConfig newStarTreeIndexConfig = new StarTreeIndexConfig(Arrays.asList("Distance", "Carrier"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+        List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null, 100);
     TableConfig newTableConfig =
         getTableConfigBuilder().setStarTreeIndexConfigs(List.of(newStarTreeIndexConfig)).build();
     assertTrue(
@@ -491,7 +585,7 @@ public class BaseTableDataManagerNeedRefreshTest {
     // Create a segment with StarTree index on Carrier, Distance.
 
     StarTreeIndexConfig starTreeIndexConfig = new StarTreeIndexConfig(Arrays.asList("Carrier", "Distance"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+        List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null, 100);
     TableConfig tableConfig = getTableConfigBuilder().setStarTreeIndexConfigs(List.of(starTreeIndexConfig)).build();
     ImmutableSegmentDataManager segmentDataManager =
         createImmutableSegmentDataManager(new IndexLoadingConfig(tableConfig, SCHEMA), _testName, generateRows());
@@ -499,7 +593,7 @@ public class BaseTableDataManagerNeedRefreshTest {
     // Create a StarTree index.
     StarTreeIndexConfig newStarTreeIndexConfig =
         new StarTreeIndexConfig(Arrays.asList("Carrier", "Distance"), Arrays.asList("Carrier", "Distance"),
-            Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+            List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null, 100);
     TableConfig newTableConfig =
         getTableConfigBuilder().setStarTreeIndexConfigs(List.of(newStarTreeIndexConfig)).build();
     assertTrue(
@@ -515,14 +609,14 @@ public class BaseTableDataManagerNeedRefreshTest {
 
     StarTreeIndexConfig starTreeIndexConfig =
         new StarTreeIndexConfig(Arrays.asList("Carrier", "Distance"), Arrays.asList("Carrier", "Distance"),
-            Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+            List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null, 100);
     TableConfig tableConfig = getTableConfigBuilder().setStarTreeIndexConfigs(List.of(starTreeIndexConfig)).build();
     ImmutableSegmentDataManager segmentDataManager =
         createImmutableSegmentDataManager(new IndexLoadingConfig(tableConfig, SCHEMA), _testName, generateRows());
 
     StarTreeIndexConfig newStarTreeIndexConfig =
         new StarTreeIndexConfig(Arrays.asList("Carrier", "Distance"), Arrays.asList("Distance", "Carrier"),
-            Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+            List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null, 100);
     TableConfig newTableConfig =
         getTableConfigBuilder().setStarTreeIndexConfigs(List.of(newStarTreeIndexConfig)).build();
     assertFalse(
@@ -537,13 +631,13 @@ public class BaseTableDataManagerNeedRefreshTest {
 
     StarTreeIndexConfig starTreeIndexConfig =
         new StarTreeIndexConfig(Arrays.asList("Carrier", "Distance"), Arrays.asList("Carrier", "Distance"),
-            Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+            List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null, 100);
     TableConfig tableConfig = getTableConfigBuilder().setStarTreeIndexConfigs(List.of(starTreeIndexConfig)).build();
     ImmutableSegmentDataManager segmentDataManager =
         createImmutableSegmentDataManager(new IndexLoadingConfig(tableConfig, SCHEMA), _testName, generateRows());
 
     StarTreeIndexConfig newStarTreeIndexConfig = new StarTreeIndexConfig(Arrays.asList("Carrier", "Distance"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+        List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null, 100);
     TableConfig newTableConfig =
         getTableConfigBuilder().setStarTreeIndexConfigs(List.of(newStarTreeIndexConfig)).build();
     assertTrue(
@@ -557,13 +651,13 @@ public class BaseTableDataManagerNeedRefreshTest {
     // Test 8: Adding a new StarTree index with an added metrics aggregation function should trigger segment refresh.
 
     StarTreeIndexConfig starTreeIndex = new StarTreeIndexConfig(Arrays.asList("Carrier", "Distance"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+        List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null, 100);
     TableConfig tableConfig = getTableConfigBuilder().setStarTreeIndexConfigs(List.of(starTreeIndex)).build();
     ImmutableSegmentDataManager segmentDataManager =
         createImmutableSegmentDataManager(new IndexLoadingConfig(tableConfig, SCHEMA), _testName, generateRows());
 
     StarTreeIndexConfig newStarTreeIndexConfig = new StarTreeIndexConfig(Arrays.asList("Carrier", "Distance"), null,
-        Arrays.asList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName(), "MAX__Distance"), null, 100);
+        Arrays.asList(AggregationFunctionColumnPair.COUNT_STAR_NAME, "MAX__Distance"), null, 100);
     TableConfig newTableConfig =
         getTableConfigBuilder().setStarTreeIndexConfigs(List.of(newStarTreeIndexConfig)).build();
     assertTrue(
@@ -578,13 +672,13 @@ public class BaseTableDataManagerNeedRefreshTest {
     // trigger segment refresh.
 
     StarTreeIndexConfig starTreeIndexConfig = new StarTreeIndexConfig(Arrays.asList("Carrier", "Distance"), null,
-        Arrays.asList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName(), "MAX__Distance"), null, 100);
+        Arrays.asList(AggregationFunctionColumnPair.COUNT_STAR_NAME, "MAX__Distance"), null, 100);
     TableConfig tableConfig = getTableConfigBuilder().setStarTreeIndexConfigs(List.of(starTreeIndexConfig)).build();
     ImmutableSegmentDataManager segmentDataManager =
         createImmutableSegmentDataManager(new IndexLoadingConfig(tableConfig, SCHEMA), _testName, generateRows());
 
     StarTreeIndexConfig newStarTreeIndexConfig = new StarTreeIndexConfig(Arrays.asList("Carrier", "Distance"), null,
-        Arrays.asList("MAX__Distance", AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+        Arrays.asList("MAX__Distance", AggregationFunctionColumnPair.COUNT_STAR_NAME), null, 100);
     TableConfig newTableConfig =
         getTableConfigBuilder().setStarTreeIndexConfigs(List.of(newStarTreeIndexConfig)).build();
     assertFalse(
@@ -598,7 +692,7 @@ public class BaseTableDataManagerNeedRefreshTest {
     // Test 10: removing an aggregation function through aggregation config should trigger segment refresh.
 
     StarTreeIndexConfig starTreeIndexConfig = new StarTreeIndexConfig(Arrays.asList("Carrier", "Distance"), null,
-        Arrays.asList("MAX__Distance", AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+        Arrays.asList("MAX__Distance", AggregationFunctionColumnPair.COUNT_STAR_NAME), null, 100);
 
     TableConfig tableConfig = getTableConfigBuilder().setStarTreeIndexConfigs(List.of(starTreeIndexConfig)).build();
     ImmutableSegmentDataManager segmentDataManager =
@@ -628,8 +722,7 @@ public class BaseTableDataManagerNeedRefreshTest {
 
     // Create a StarTree index.
     StarTreeIndexConfig newStarTreeIndexConfig = new StarTreeIndexConfig(Arrays.asList("Carrier", "Distance"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()),
-        Collections.singletonList(aggregationConfig), 100);
+        List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), List.of(aggregationConfig), 100);
     TableConfig newTableConfig =
         getTableConfigBuilder().setStarTreeIndexConfigs(List.of(newStarTreeIndexConfig)).build();
     assertTrue(
@@ -645,8 +738,7 @@ public class BaseTableDataManagerNeedRefreshTest {
 
     StarTreeAggregationConfig aggregationConfig = new StarTreeAggregationConfig("Distance", "MAX");
     StarTreeIndexConfig starTreeIndexConfig = new StarTreeIndexConfig(Arrays.asList("Carrier", "Distance"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()),
-        Collections.singletonList(aggregationConfig), 100);
+        List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), List.of(aggregationConfig), 100);
     TableConfig tableConfig = getTableConfigBuilder().setStarTreeIndexConfigs(List.of(starTreeIndexConfig)).build();
     ImmutableSegmentDataManager segmentDataManager =
         createImmutableSegmentDataManager(new IndexLoadingConfig(tableConfig, SCHEMA), _testName, generateRows());
@@ -665,14 +757,16 @@ public class BaseTableDataManagerNeedRefreshTest {
   @Test
   void testStarTreeIndexMaxLeafNode()
       throws Exception {
-    StarTreeIndexConfig starTreeIndexConfig = new StarTreeIndexConfig(Collections.singletonList("Carrier"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+    StarTreeIndexConfig starTreeIndexConfig =
+        new StarTreeIndexConfig(List.of("Carrier"), null, List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null,
+            100);
     TableConfig tableConfig = getTableConfigBuilder().setStarTreeIndexConfigs(List.of(starTreeIndexConfig)).build();
     ImmutableSegmentDataManager segmentDataManager =
         createImmutableSegmentDataManager(new IndexLoadingConfig(tableConfig, SCHEMA), _testName, generateRows());
 
-    StarTreeIndexConfig newStarTreeIndexConfig = new StarTreeIndexConfig(Collections.singletonList("Carrier"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 10);
+    StarTreeIndexConfig newStarTreeIndexConfig =
+        new StarTreeIndexConfig(List.of("Carrier"), null, List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null,
+            10);
     TableConfig newTableConfig =
         getTableConfigBuilder().setStarTreeIndexConfigs(List.of(newStarTreeIndexConfig)).build();
     assertTrue(
@@ -683,8 +777,9 @@ public class BaseTableDataManagerNeedRefreshTest {
   @Test
   void testStarTreeIndexRemove()
       throws Exception {
-    StarTreeIndexConfig starTreeIndexConfig = new StarTreeIndexConfig(Collections.singletonList("Carrier"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+    StarTreeIndexConfig starTreeIndexConfig =
+        new StarTreeIndexConfig(List.of("Carrier"), null, List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null,
+            100);
     TableConfig tableConfig = getTableConfigBuilder().setStarTreeIndexConfigs(List.of(starTreeIndexConfig)).build();
     ImmutableSegmentDataManager segmentDataManager =
         createImmutableSegmentDataManager(new IndexLoadingConfig(tableConfig, SCHEMA), _testName, generateRows());
@@ -696,14 +791,16 @@ public class BaseTableDataManagerNeedRefreshTest {
       throws Exception {
     // Test 15: Add multiple StarTree Indexes should trigger segment refresh.
 
-    StarTreeIndexConfig starTreeIndexConfig = new StarTreeIndexConfig(Collections.singletonList("Carrier"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+    StarTreeIndexConfig starTreeIndexConfig =
+        new StarTreeIndexConfig(List.of("Carrier"), null, List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null,
+            100);
     TableConfig tableConfig = getTableConfigBuilder().setStarTreeIndexConfigs(List.of(starTreeIndexConfig)).build();
     ImmutableSegmentDataManager segmentDataManager =
         createImmutableSegmentDataManager(new IndexLoadingConfig(tableConfig, SCHEMA), _testName, generateRows());
 
-    StarTreeIndexConfig newStarTreeIndexConfig = new StarTreeIndexConfig(Collections.singletonList("Distance"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+    StarTreeIndexConfig newStarTreeIndexConfig =
+        new StarTreeIndexConfig(List.of("Distance"), null, List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null,
+            100);
     TableConfig newTableConfig =
         getTableConfigBuilder().setStarTreeIndexConfigs(List.of(starTreeIndexConfig, newStarTreeIndexConfig)).build();
     assertTrue(
@@ -716,8 +813,9 @@ public class BaseTableDataManagerNeedRefreshTest {
       throws Exception {
     // Test 16: Enabling default StarTree index should trigger a segment refresh.
 
-    StarTreeIndexConfig starTreeIndexConfig = new StarTreeIndexConfig(Collections.singletonList("Carrier"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+    StarTreeIndexConfig starTreeIndexConfig =
+        new StarTreeIndexConfig(List.of("Carrier"), null, List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null,
+            100);
     TableConfig tableConfig = getTableConfigBuilder().setStarTreeIndexConfigs(List.of(starTreeIndexConfig)).build();
     ImmutableSegmentDataManager segmentDataManager =
         createImmutableSegmentDataManager(new IndexLoadingConfig(tableConfig, SCHEMA), _testName, generateRows());
@@ -734,8 +832,9 @@ public class BaseTableDataManagerNeedRefreshTest {
       throws Exception {
     // Test 17: Attempting to trigger segment refresh again should not be successful.
 
-    StarTreeIndexConfig starTreeIndexConfig = new StarTreeIndexConfig(Collections.singletonList("Carrier"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+    StarTreeIndexConfig starTreeIndexConfig =
+        new StarTreeIndexConfig(List.of("Carrier"), null, List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null,
+            100);
     TableConfig tableConfig = getTableConfigBuilder().setStarTreeIndexConfigs(List.of(starTreeIndexConfig)).build();
     IndexLoadingConfig indexLoadingConfig = new IndexLoadingConfig(tableConfig, SCHEMA);
     ImmutableSegmentDataManager segmentDataManager =
@@ -748,8 +847,9 @@ public class BaseTableDataManagerNeedRefreshTest {
       throws Exception {
     // Test 18: Disabling default StarTree index should trigger a segment refresh.
 
-    StarTreeIndexConfig starTreeIndexConfig = new StarTreeIndexConfig(Collections.singletonList("Carrier"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+    StarTreeIndexConfig starTreeIndexConfig =
+        new StarTreeIndexConfig(List.of("Carrier"), null, List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null,
+            100);
     TableConfig tableConfig = getTableConfigBuilder().setStarTreeIndexConfigs(List.of(starTreeIndexConfig)).build();
     tableConfig.getIndexingConfig().setEnableDefaultStarTree(true);
     ImmutableSegmentDataManager segmentDataManager =
